# xdcc-cli

./: .gitignore  Cargo.toml  README.md
src/: dcc_send.rs  lib.rs  main.rs  packs_ranges.rs  xdcc.rs
