[package]
name = "xdcc-cli"
version = "0.1.0"
authors = ["Matteo Guarda <matteoguarda@tutanota.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.17"
rand = "0.7.3"
lazy_static = "1.4.0"
regex = "1.3.9"
log = "0.4.11"
env_logger = "0.7.1"
indicatif = "0.15.0"
thiserror = "1.0.20"
anyhow = "1.0.32"
